--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -11,6 +11,9 @@
     </style>
     {% load static %}
     <link rel="stylesheet" href="{% static 'map/css/map.css' %}">
+    <script>
+      var roomlist = "{{roomlist}}"
+    </script>
 </head>
 <body>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a2b9f9cbc1a097223ea990947aa65fab"></script>
@@ -51,10 +54,13 @@
         </div>
     </nav>
     <div id="map" style="width:100%;height:700px;"></div>
+    <form class="room_form" action="/map/makeroom/" method="post">
+      {% csrf_token %}
+    </form>
     <button type="button" class="btn btn-dark btn-lg createroom1">운동팟 만들기</button>
     <button type="button" class="btn btn-dark btn-lg createroom2" onclick="createroom2()" style="visibility:hidden;">장소 결정!</button>
     {% load static %}
     <script src="{% static 'map/js/map.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
