--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -12,7 +12,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'map/css/map.css' %}">
     <script>
-      var roomlist = "{{roomlist}}"
+      var roomlist = JSON.parse("{{ roomlist_js | escapejs }}")
     </script>
 </head>
 <body>
